tests/ui/derive/fail_wrong_timestamp_field_type.stderr
error: `created_at` must use forge::DateTime
 --> tests/ui/derive/fail_wrong_timestamp_field_type.rs:8:5
  |
8 |     created_at: String,
  |     ^^^^^^^^^^^^^^^^^^
